added title and picture event listeners

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -12,6 +12,12 @@
     h2 {
       margin-top: 20px;
     }
+
+    .title-shift {
+     text-align: center;
+     font-size: 6rem;
+     font-weight: bold;
+    }
   }
 
   .content-section {
