--- a/less/home-page.less
+++ b/less/home-page.less
@@ -18,6 +18,11 @@
      font-size: 6rem;
      font-weight: bold;
     }
+
+    .off {
+      display: none;
+      border: 2px solid red;
+    }  
   }
 
   .content-section {
@@ -25,8 +30,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
-   
+ 
     
     .text-content {
       width: 48%;
